# hipSOLVER

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  bump_develop_version.sh  bump_hipsolver_version.sh  bump_master_version.sh  custom.properties  header.hpp.in  install.sh  rmake.py  rtest.py  rtest.win.xml  rtest.xml
.azuredevops/: rocm-ci.yml
.githooks/: pre-commit
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: issue_report.yml
.jenkins/: common.groovy  debug.groovy  multicompiler.groovy  precheckin-cuda.groovy  precheckin.groovy  static.groovy  staticanalysis.groovy  staticlibrary.groovy
clients/: CMakeLists.txt
clients/benchmarks/: CMakeLists.txt  client.cpp
clients/cmake/: build-options.cmake
clients/common/: cblas_interface.cpp  clients_utility.cpp  hipsolver_datatype2string.cpp  lapack_host_reference.cpp  utility.cpp
clients/gtest/: CMakeLists.txt  csrlsvchol_gtest.cpp  csrrf_refactlu_gtest.cpp  csrrf_solve_gtest.cpp  determinism_gtest.cpp  gebrd_gtest.cpp  gels_gtest.cpp  geqrf_gtest.cpp  gesv_gtest.cpp  gesvd_gtest.cpp  gesvda_gtest.cpp  gesvdj_gtest.cpp  getrf_gtest.cpp  getrs_gtest.cpp  hipblas_include1_gtest.cpp  hipblas_include2_gtest.cpp  hipsolver_gtest_main.cpp  orgbr_ungbr_gtest.cpp  orgqr_ungqr_gtest.cpp  orgtr_ungtr_gtest.cpp  ormqr_unmqr_gtest.cpp  ormtr_unmtr_gtest.cpp  params_gtest.cpp  potrf_gtest.cpp  potri_gtest.cpp  potrs_gtest.cpp  syevd_heevd_gtest.cpp  syevdx_heevdx_gtest.cpp  syevj_heevj_gtest.cpp  sygvd_hegvd_gtest.cpp  sygvdx_hegvdx_gtest.cpp  sygvj_hegvj_gtest.cpp  sytrd_hetrd_gtest.cpp  sytrf_gtest.cpp
clients/include/: cblas_interface.h  clientcommon.hpp  complex.hpp  hipsolver.hpp  hipsolverSp.hpp  hipsolver_datatype2string.hpp  hipsolver_dispatcher.hpp  hipsolver_fortran.f90  hipsolver_fortran.hpp  hipsolver_no_fortran.hpp  lapack_host_reference.hpp  testing_csrlsvchol.hpp  testing_csrrf_refactlu.hpp  testing_csrrf_solve.hpp  testing_gebrd.hpp  testing_gels.hpp  testing_geqrf.hpp  testing_gesv.hpp  testing_gesvd.hpp  testing_gesvda.hpp  testing_gesvdj.hpp  testing_getrf.hpp  testing_getrf_npvt.hpp  testing_getrs.hpp  testing_hipblas_include1.hpp  testing_hipblas_include2.hpp  testing_orgbr_ungbr.hpp  testing_orgqr_ungqr.hpp  testing_orgtr_ungtr.hpp  testing_ormqr_unmqr.hpp  testing_ormtr_unmtr.hpp  testing_potrf.hpp  testing_potri.hpp  testing_potrs.hpp  testing_syevd_heevd.hpp  testing_syevdx_heevdx.hpp  testing_syevj_heevj.hpp  testing_sygvd_hegvd.hpp  testing_sygvdx_hegvdx.hpp  testing_sygvj_hegvj.hpp  (+4 more)
clients/rocblascommon/: clients_utility.hpp  d_vector.hpp  device_batch_vector.hpp  device_strided_batch_vector.hpp  device_vector.hpp  host_batch_vector.hpp  host_strided_batch_vector.hpp  host_vector.hpp  program_options.hpp  rocblas_init.hpp  rocblas_vector.hpp
clients/rocsolvercommon/: norm.hpp  rocsolver_arguments.hpp  rocsolver_test.cpp  rocsolver_test.hpp
clients/samples/: CMakeLists.txt  example_basic.c  example_basic.cpp
cmake/: .Findhip.cmake.swp  Findhip.cmake  armor-config.cmake  get-cli-arguments.cmake  hipsolver-backward-compat.cmake
docker/: dockerfile-build-centos  dockerfile-build-fedora  dockerfile-build-nvidia-cuda  dockerfile-build-sles  dockerfile-build-ubuntu-rock  dockerfile-install-centos  dockerfile-install-fedora  dockerfile-install-sles  dockerfile-install-ubuntu-rock
docs/: Doxyfile  classification-map.xml  conf.py  index.rst  license.rst
docs/.doxygen/: Doxyfile
docs/.sphinx/: _toc.yml.in  requirements.txt
docs/api/: auxiliary.rst  helpers.rst  index.rst  intro.rst  lapack.rst  lapacklike.rst  reference.rst  types.rst
docs/compat-api/: auxiliary.rst  helpers.rst  index.rst  lapack.rst  lapacklike.rst  types.rst
docs/data/: classification-map.xml
docs/doxygen/: Doxyfile
docs/how-to/: index.rst
docs/howto/: index.rst  usage.rst
docs/installation/: index.rst  install.rst
docs/refactor-api/: helpers.rst  index.rst  refactor.rst  types.rst
docs/refactor_api/: helpers.rst  refactor.rst
docs/reference/: index.rst  intro.rst
docs/reference/api/: auxiliary.rst  helpers.rst  index.rst  lapack.rst  lapacklike.rst  types.rst
docs/reference/compat-api/: auxiliary.rst  index.rst  lapack.rst  types.rst
docs/reference/dense-api/: auxiliary.rst  helpers.rst  index.rst  lapack.rst  lapacklike.rst  types.rst
docs/reference/refactor-api/: index.rst  refactor.rst  types.rst
docs/reference/sparse-api/: index.rst  sparse.rst
docs/source/: Makefile  api_index.rst  api_lapackfunc.rst  api_lapacklike.rst  api_types.rst  compat_helperfunc.rst  compat_index.rst  compat_lapackfunc.rst  compat_types.rst  conf.py  index.rst  readme.rst  refactor_index.rst  requirements.txt  userguide_index.rst  userguide_install.rst  userguide_intro.rst  userguide_usage.rst
docs/sparse-api/: helpers.rst  index.rst  sparse.rst  types.rst
docs/sphinx/: _toc.yml.in  requirements.txt
docs/userguide/: index.rst  install.rst  intro.rst  usage.rst  userguide_index.rst  userguide_install.rst  userguide_intro.rst
